--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -860,7 +860,7 @@ a.contact-link:is(:hover, :focus) { color: var(--white); }
   position: fixed;
   bottom: 10px;
   right: 20px;
-  background-color: var(--harvest-gold);
+  background-color: var(--indian-yellow);
   color: var(--white);
   font-size: 20px;
   padding: 10px;
