--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,9 +22,9 @@
 
   --rich-black-fogra-39_50: hsla(0, 0%, 5%, 0.5);
   --rich-black-fogra-39: hsl(0, 0%, 5%);
-  --indian-yellow_10: hsla(36, 61%, 58%, 0.1);
-  --indian-yellow: hsl(36, 61%, 58%);
-  --harvest-gold: hsl(36, 66%, 53%);
+  --indian-yellow_10: hsl(40, 5%, 34%);;
+  --indian-yellow: hsl(33, 8%, 28%);
+  --harvest-gold: hsl(33, 8%, 21%);
   --eerie-black-1: hsl(0, 0%, 14%);
   --eerie-black-2: hsl(0, 0%, 12%);
   --eerie-black-2_85: hsla(0, 0%, 12%, 0.85);
