--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -717,7 +717,7 @@ textarea.input-field {
 
 .footer-brand {
   border: 1px solid var(--white_10);
-  margin-block-end: 70px;
+  margin-block-end: 5px;
 }
 
 .footer .logo {
@@ -1460,6 +1460,10 @@ a.contact-link:is(:hover, :focus) { color: var(--white); }
    * FOOTER/rodapé
    */
 
+   .allFooter{
+    height: 60%;
+   }
+  
    .footer-link-box { grid-template-columns: 0.5fr 0.5fr 1fr 0.8fr; }
    .fontFooter{
      color: var(--white);
