--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1398,10 +1398,22 @@ a.contact-link:is(:hover, :focus) { color: var(--white); }
   margin: 5%;
 } 
 
-#myVideo {
-  height: 100vh;
-  width: 100vh;
+#workshopDs {
+  position: relative;
+  padding-bottom: 56.25%;
+  height: 0;
 }
+
+
+#myVideo {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+
 
 .videoTxt{
   display: flex;
