--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1435,22 +1435,44 @@ a.contact-link:is(:hover, :focus) { color: var(--white); }
   color: var(--indian-yellow);
   margin: 2%;
 }
-.content{
+.visagismo_content{
   display: flex;
-  width: 50%; 
-  justify-content: left;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: row;
 }
-
+.visagismo_content2 {
+  display: flex;
+  justify-content: center;
+  margin-top: 25px;
+}
+.text-container{
+  width: 500px;
+}
 .imgContainer{
- justify-content: right; 
- align-items: right; 
- width: 50%; 
+ justify-content: center; 
+ align-items: center; 
 }
 @media screen and (max-width: 600px) {
   .container {
     flex-direction: column; 
   }
+
+  .text-container{
+    width: 250px;
+  }
+
+  .foto_mobile{
+    margin: 0 auto;
+    width: 250px;
+  }
+
+  .logoheader{
+    display: flex;
+    flex-direction: row;
 }
+  }
+
 
 /**
    * FOOTER/rodapé
@@ -1466,11 +1488,7 @@ a.contact-link:is(:hover, :focus) { color: var(--white); }
      text-align: center;
     
    }
-   @media screen and (max-width: 600px) {
-    .container {
-      flex-direction: column; 
-    }
-  }
+  
 
   
   
