--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1444,6 +1444,9 @@ a.contact-link:is(:hover, :focus) { color: var(--white); }
  justify-content: center; 
  align-items: center; 
 }
+.colorFont{
+  color: white;
+}
 @media screen and (max-width: 600px) {
   .container {
     flex-direction: column; 
