--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1432,8 +1432,10 @@ a.contact-link:is(:hover, :focus) { color: var(--white); }
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%;
+  width: 85%;
   height: 100%;
+  margin: 5%;
+  padding: 5%;
 }
 
 
