--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -190,7 +190,7 @@ body {
   content: "";
 }
 .backgroundImg{
-  background-image: url("/barber/assets/images/logonovoEsthevan2.jpg") ;
+  background-image: url("/barber/assets/images/PHOTO-2024-08-29-13-32-09\ \(1\).png") ;
 }
 
 .has-bg-image {
