--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -323,7 +323,7 @@ body {
 .header-bottom.active {
   position: fixed;
   top: 0;
-  background-color:#20222E;
+  background-color:#2F313D;
   transform: translateY(-100%);
   animation: slideIn 0.5s ease forwards;
 }
