--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -147,7 +147,7 @@ address { font-style: normal; }
 
 html {
   font-family: var(--ff-rubik);
-  font-size: 10px;1
+  font-size: 10px;
   scroll-behavior: smooth;
 }
 
